Fix whitespace

--- a/styles/typography.css
+++ b/styles/typography.css
@@ -4,7 +4,9 @@
 /* typography.css - https://developer.mozilla.org/en-US/docs/Learn/CSS/Styling_text/Fundamentals
   - http://webtypography.net
   - Spaces - http://webtypography.net/2.1.4
-  - Vertical Spacing - http://webtypography.net/2.2.2
+  - Vertical Spacing
+    - http://webtypography.net/2.2.2
+    - https://zellwk.com/blog/why-vertical-rhythms
   - Special Characters Cheat Sheet - https://www.typewolf.com/cheatsheet
 
   - Golden Ratio:
